--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 
     buildTypes {
         release {
@@ -30,9 +34,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-//    buildFeatures {
-//        dataBinding true
-//    }
 }
 
 dependencies {
@@ -53,5 +54,11 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt  "androidx.room:room-compiler:$room_version"
+
+    def lifecycle_version = "2.6.0-alpha01"
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
 
 }
