TODO 등록 디자인 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activity.RegistrationActivity"/>
+        <activity android:name=".Activity.TodoRegisterActivity"/>
         <activity android:name=".Activity.DetailActivity"/>
         <activity android:name=".Activity.CycleRegisterActivity"/>
 
