--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,26 @@ android {
         dataBinding true
     }
 
+    signingConfigs {
+        Properties properties = new Properties()
+        properties.load(new FileInputStream("$project.rootDir/local.properties"))
+        properties.each { prop ->
+            project.ext.set(prop.key, prop.value)
+        }
+
+        release {
+            storeFile file(properties["storeFile"])
+            storePassword properties["storePassword"]
+            keyAlias properties["keytool_alias"]
+            keyPassword properties["keyPassword"]
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
