알림 요청 기능 추가
알림 요청기능은 targetSDK 버전 33이상부터 가능하기 때문에 버전도 올려줌

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.todo_list"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -97,4 +97,6 @@ dependencies {
     // 설정
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
+    //permission
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 }
