--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,16 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.todo_list"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -74,7 +75,8 @@ dependencies {
     implementation "androidx.navigation:navigation-runtime:$nav_version"
 
     def room_version = "2.4.3"
-    implementation("androidx.room:room-runtime:$room_version")
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt  "androidx.room:room-compiler:$room_version"
 
@@ -99,4 +101,12 @@ dependencies {
 
     //permission
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    //hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+}
+
+kapt {
+    correctErrorTypes true
 }
