--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,10 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ScheduleRegisterActivity" />
-        <activity android:name=".activity.DetailActivity" />
-        <activity android:name=".activity.RoutineRegisterActivity" />
-        <receiver android:name=".common.AlarmReceiver"
+        <activity android:name=".ui.activity.ScheduleRegisterActivity" />
+        <activity android:name=".ui.activity.DetailActivity" />
+        <activity android:name=".ui.activity.RoutineRegisterActivity" />
+        <receiver android:name=".common.alarm.AlarmReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
