--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,13 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:2.52"
     kapt "com.google.dagger:hilt-compiler:2.52"
+
+    // WorkManager dependency
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+
+    // Hilt with WorkManager
+    implementation "androidx.hilt:hilt-work:1.2.0"
+    kapt "androidx.hilt:hilt-compiler:1.2.0"
 }
 
 kapt {
